fixed typo in top markdown cell

--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Capstone Projecct Notebook"
+    "## Capstone Project Notebook\n",
+    "\n",
+    "This Notebook will used in the completion of my Applied Data Science Capstone for the IBM Data Science Professional Certificate on Coursera."
    ]
   },
   {
