--- a/Toronto/Toronto_Neighborhoods.nbconvert.ipynb
+++ b/Toronto/Toronto_Neighborhoods.nbconvert.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,6 +907,26 @@
     "ACCESS_TOKEN = creds.AccessToken\n",
     "VERSION = '20180604'\n",
     "LIMIT = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ONTXUIG3XUMG0G2FSDQSGAFFV1MVHOZUZXHCF1WRFY1YQEXD'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CLIENT_ID"
    ]
   },
   {
@@ -6805,7 +6825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   },
   "toc": {
    "base_numbering": 1,
